# leetcode-solutions

./: .gitignore  CMakeLists.txt  README.md  gitpush.sh
src/: CMakeLists.txt  main.cpp
src/14days-cracking/: CMakeLists.txt
src/2023/: CMakeLists.txt
src/2023/arrays/: CMakeLists.txt
src/2023/dp/: CMakeLists.txt
src/2023/graph/: CMakeLists.txt
src/2023/map_n_set/: CMakeLists.txt
src/2023/stack/: CMakeLists.txt
src/arrays/: CMakeLists.txt
src/arrays/src/: bag_of_tokens.cpp  combination_sum_iv.cpp  continues_subarray_sum.cpp  continues_subarray_sum_.cpp  convert_1d_array_to_2d.cpp  count_number_of_teams.cpp  count_of_smaller_number_after_self.cpp  find_and_replace_pattern.cpp  find_common_charactors.cpp  find_duplicates_from_sorted_array_in_place.cpp  find_first_and_last_positions.cpp  find_k_closest_elements.cpp  find_polygon_with_the_largest_perimeter.cpp  find_words_that_can_be_formed_charactors.cpp  greatest_common_divisor_traversal.cpp  increasing_triplet_subsequence.cpp  kth_smallest_element_in_a_sorted_matrix.cpp  largest_local_value_in_a_matrix.cpp  luck_numbers_in_a_matrix.cpp  max_sum_of_reactangle_no_large_than_k.cpp  maximize_happinies_of_selected_children.cpp  maximum_number_of_you_get.cpp  maximum_score_from_perfoming_multication_operations.cpp  minim_average_difference.cpp  minimum_time_visiting_all_points.cpp  nearest_exit_from_enterence_in_maze.cpp  product_of_array_except_self.cpp  range_sum_query-mutable.cpp  range_sum_query_imutable.cpp  rotate_matrix.cpp  search_matrix_ii.cpp  set_mismatch.cpp  sort_the_matrix_diagonally.cpp  squares_of_a_sorted_array.cpp  subarrays_with_k_different_integers.cpp  sum_of_all_absulute_difference_in_sorted_arr.cpp  sum_of_even_numbers_after_queries.cpp  tanspose_matrix.cpp  the_skyline_problem.cpp  toeplitz_matrix.cpp  (+1 more)
src/backtracking/: CMakeLists.txt
src/backtracking/src/: numbers_with_same_consecutive_differences.cpp  word_search.cpp
src/bitmanupulations/: CMakeLists.txt
src/bitmanupulations/src/: concatenation_of_consecutive_binary_numbers.cpp  utf_8_validation.cpp
src/contests/: CMakeLists.txt
src/contests/src/: 1.cpp  2.cpp  3.cpp  base.h  best_poker_hans.cpp  cosntruct_di_string.cpp  count_number_of_bad_pairs.cpp  find_all_good_indeces.cpp  good_sub_arr.cpp  infections.cpp  largest_local_values.cpp  largest_positive_integer_that_exits_with_its_negative.cpp  larget_palindrome.cpp  longest_sub_Arr.cpp  longest_subarr.cpp  longest_subseq_sum.cpp  merge_similar_items.cpp  min_amount_of_time.cpp  min_hours_of_training.cpp  min_recolor_to_getk.cpp  node_with_highst_edge.cpp  number_container_system.cpp  number_of_zeros_.cpp  reachable_nodes.cpp  remove_star.cpp  shift_letters_2.cpp  sort_the_people.cpp  task_of_pairing.cpp  template.cpp  time_need_to_arrange.cpp  triplet.cpp  username_chantes.cpp
src/disjoint_set/: CMakeLists.txt
src/dp/: CMakeLists.txt
src/dp/src/: arithmetic_slices.cpp  arithmetic_slices_ii.cpp  as_far_from_land_as_possible.cpp  binray_trees_with_factors.cpp  count_vowels_permutations.cpp  decode_ways.cpp  decode_ways_i.cpp  find_the_maximum_sum_of_node_values.cpp  longest_increasing_subsequence.cpp  maximum_product_subarray.cpp  maximum_profit_in_job_scheduling.cpp  maximum_sum_circular_sub_array.cpp  minimum_difficulty_of_a_job_schedule.cpp  minimum_number_refueling_stops.cpp  pascal_triangle.cpp  perfect_squares.cpp  string_compression_ii.cpp  trapping_water.cpp
src/dp/udemy/: all_sub_sets.cpp
src/graph/: CMakeLists.txt
src/graph/src/: all_paths_from_source_to_target.cpp  build_matrix_with_conditions.cpp  flood_fill.cpp  max_area_of_island.cpp  minimum_cost_to_covert_string_1.cpp  most_stones_removed_with_same_row_or_column.cpp  number_of_closed_islands.cpp  number_of_enclaves.cpp  number_of_good_paths.cpp  number_of_islands.cpp  pacific_atlantic_atlantic_water_flow.cpp  satisfiability_of_equality_equations.cpp  second__minimum_time_to_reach_destination.cpp  shortest_paths_with_alternating_colors.cpp
src/greedy/: CMakeLists.txt
src/greedy/src/: largest_perimeter_triangle.cpp  largest_trianangle_area.cpp  reduce_array_size_to_the_half.cpp  three_sum_closest.cpp
src/leetcode75/: CMakeLists.txt
src/leetcode75/src/: 3sum_closest.cpp  base.h  best_time_to_buy_and_sell.cpp  binary_tree_level_order_travesal.cpp  bulls_and_cows.cpp  decode_string.cpp  find_all_anagrams_in_a_string.cpp  flood_fill.cpp  happy_number.cpp  invert_btree.cpp  is_subsequence.cpp  isomorphic_strings.cpp  last_stone_weight.cpp  linkedlist_cycle_ii.cpp  longest_common_prefix.cpp  longest_palindrome.cpp  longest_repeating_character_replacement.cpp  longest_substring_without_reapting.cpp  maximum_product_sub_array.cpp  merge_two_sorted_list.cpp  middle_of_the_linkedlist.cpp  multiply_strings.cpp  n-aray-tree-preoder-traversal.cpp  number_of_islands.cpp  odd_even_linkedlist.cpp  palindrome_linkedlist.cpp  partition_equal_subset_sum.cpp  remove_nth_node_from_end_of_list.cpp  sort_list.cpp  spiral_matrix.cpp  substring_with_concat_of_all_words.cpp  top_k_frequent_words.cpp  two_sum.cpp  unique_paths.cpp  valid_btree.cpp  where_will_the_ball_fall.cpp
src/linkedlist/: CMakeLists.txt
src/linkedlist/src/: delete_node_in_a_linkedlist.cpp  delete_node_on_a_linkedlist.cpp  delete_the_middle_node_of_a_linked_list.cpp  odd_even_linkedlist.cpp  palindrom_list.cpp  partition_list_.cpp  remove_n_node_from_end_of_list.cpp  remove_nth_node_from_a_list.cpp  reverse_linked_list.cpp  reverse_linkedlist_ii.cpp
src/map_n_set/: CMakeLists.txt
src/map_n_set/src/: containes_duplicate_ii.cpp  determine_if_two_strings_are_close.cpp  find_original_array_from_doubled_array.cpp  find_players_with_zero_or_one_loss.cpp  insert_delete_getrandom.cpp  minimum_rounds_to_complete_all_tasks.cpp  my_calendar_i.cpp  mycalendar_iii.cpp  palindrome_pairs.cpp  ugly_number_ii.cpp  (+4 more)
src/math/: CMakeLists.txt
src/matrix/: CMakeLists.txt
src/memorization/: CMakeLists.txt
src/practice/: CMakeLists.txt
src/recursions/: CMakeLists.txt
src/stacks_queues/: CMakeLists.txt
src/strings/: CMakeLists.txt
src/trees/: CMakeLists.txt
(+149 files in other folders)
