project(14days)

#add_executable(binsearch leetcode/binary_search.cpp)
#add_executable(firstbadversion leetcode/first_bad_version.cpp)
#add_executable(searchinsertp leetcode/serach_insert_position.cpp)
#add_executable(squares_of_sorted_array leetcode/squares_of_sorted_array.cpp)
#add_executable(rotate_array leetcode/rotate_array.cpp)
#add_executable(movezeros leetcode/move_zeros.cpp)
#add_executable(twosum leetcode/two_sum_input_array_sorted.cpp)
#add_executable(containsDup leetcode/contains_duplicate.cpp)
#add_executable(containsDup leetcode/maximum_subarray.cpp)
#add_executable(twosum leetcode/two_sum.cpp)
#add_executable(mergetwosortedarrays leetcode/merge_two_sorted_arrays.cpp)
#add_executable(intersectionof_two_arrays leetcode/intersection_of_two_arrays.cpp)
#add_executable(besttime_to_buy_n_sell leetcode/best_time_buy_and_sell_stock.cpp)
#add_executable(reverse_string leetcode/reverse_string.cpp)
#add_executable(reverse_words_in_a_string leetcode/reverse_words_in_a_string.cpp)
#add_executable(middle_of_the_linkedlist leetcode/middle_of_the_linkedlist.cpp)
#add_executable(removenth_node_eol leetcode/remove_n_th_node_from_end_of_list.cpp)
#add_executable(longestsubstring leetcode/longest_substring_without_repeating.cpp)
#add_executable(permutationinstring leetcode/permulation_in_string.cpp)
#add_executable(mergebtrees leetcode/merge_two_btree.cpp)
#add_executable(floodfill leetcode/flood_fill.cpp)
#add_executable(maxarea leetcode/max_area_of_island.cpp)
#add_executable(populatingnextrightpointers leetcode/populating_next_right_pointers_in_each_node.cpp)
#add_executable(01matrix leetcode/01_matrix.cpp)
#add_executable(rotting_oranges leetcode/rotting_oranges.cpp)
#add_executable(mergetwosortedlist leetcode/merge_two_sorted_list.cpp)
#add_executable(revesersellist leetcode/reverse_linkedlist.cpp)
#add_executable(majoritylement leetcode/malority_element.cpp)
#add_executable(isomorphicstrings leetcode/isomorphic_strings.cpp)
#add_executable(containedupplicatesii leetcode/contains_dupplicate_ii.cpp)
#add_executable(happybumber leetcode/happy_number.cpp)
#add_executable(singleelement leetcode/single_element_in_sorted_array.cpp)
#add_executable(reversebits leetcode/reverse_bits.cpp)
#add_executable(constructbtree leetcode/construct_btree_inorder_post_order.cpp)
#add_executable(deletenodeinabst leetcode/delete_node_in_abst.cpp)
#add_executable(unionfinding leetcode/largest_component_size_by_common_factor.cpp)
#add_executable(uglynumber leetcode/ugly_number.cpp)
#add_executable(intervallistinsertions leetcode/interval_list_insertions.cpp)
#add_executable(maxprofuctsuarr leetcode/maximum_product_subarray.cpp)
#add_executable(constructbtreeprepostoder leetcode/construct_btree_preorder_postorder.cpp)
#add_executable(productofarray leetcode/product_of_array_except_self.cpp)
#add_executable(countingbits leetcode/counting_bits.cpp)
#add_executable(findthediff leetcode/find_the_difference.cpp)
#add_executable(allpathsfromsourcetotarget leetcode/all_paths_from_source_to_target.cpp)
#add_executable(numberofwaystoarrivedestination leetcode/number_of_ways_to_arrive_destination.cpp)
#add_executable(account_merges leetcode/account_merges.cpp)
#add_executable(maximal_rectangle leetcode/maximal_rectangle.cpp)
#add_executable(larget_rectangle_area leetcode/larget_rectangle_area.cpp)
#add_executable(houserobber leetcode/house_robber.cpp)
#add_executable(max_product_threenums leetcode/max_product_of_three_numbers.cpp)
#add_executable(streamofchars leetcode/stream_of_chars.cpp)
#add_executable(houserobber3 leetcode/house_robber_iii.cpp)
#add_executable(houserobber2 leetcode/house_robber_ii.cpp)
#add_executable(minimumcosttomove leetcode/minimum_cost_to_move_chips.cpp)
#add_executable(converbinnumberintonumber leetcode/convert_binary_number_in_a_linkedlist_into_number.cpp)
#add_executable(jumpgame3 leetcode/jump_game_iii.cpp)
#add_executable(domino_n_tromino leetcode/domino_and_tromino_tiling.cpp)
#add_executable(nthmagicalnumber leetcode/nth_magical_number.cpp)
#add_executable(partitioneqlsum leetcode/partition_equl_sum.cpp)
#add_executable(consecutivechars leetcode/consecutive_chars.cpp)
#add_executable(rangesum leetcode/range_sum_bst.cpp)
#add_executable(insertionsortlist leetcode/insertion_sort_list.cpp)
#add_executable(numberatmostngivendigitset leetcode/number_at_most_n_given_digit_set.cpp)
#add_executable(decodestring leetcode/decode_string.cpp)
#add_executable(reorderlist leetcode/reorder_list.cpp)
#add_executable(numbercomplement leetcode/number_complement.cpp)
#add_executable(pairs-ofsongs leetcode/pairs_of_songs.cpp)
#add_executable(townjudge leetcode/town_jugde.cpp)
#add_executable(carpooling leetcode/car_pooling.cpp)
#add_executable(LIS leetcode/longest_increasing_subsequence.cpp)
#add_executable(cherry_pickup leetcode/cherry_pickup_ii.cpp)
#add_executable(robotbounded-circle leetcode/robot_bounded_circle.cpp)
#add_executable(sum_of_root_to_leaf_binary_numbers leetcode/sum_of_root_to_leaf_binary_numbers.cpp)
#add_executable(insert_into_binary_tree leetcode/insert_into_binary_tree.cpp)
#add_executable(minarrows leetcode/min_nums_of_arrows_to_burst_ballons.cpp)
#add_executable(myatoi leetcode/string_to_integer.cpp)
#add_executable(jumpgameiv leetcode/jump_game_iv.cpp)
#add_executable(maxdistance_closest_person leetcode/maximize_distance_to_closest_person.cpp)
#add_executable(wp leetcode/word_pattern.cpp)
#add_executable(canplaceflowers leetcode/can_place_flowers.cpp)
#add_executable(llist_cycleii leetcode/linked_list_cycle_ii.cpp)
#add_executable(keb leetcode/koko_eats_banana.cpp)
#add_executable(gass leetcode/gas_station.cpp)
#add_executable(stonegameiv leetcode/stone_game_iv.cpp)
#add_executable(sequentialdigits leetcode/sequential_digits.cpp)
#add_executable(detectcapital leetcode/detect_capital.cpp)
#add_executable(validmountain leetcode/valid_mountaine_arry.cpp)
#add_executable(maxxor leetcode/max_xor_of_two_numbers.cpp)
#add_executable(allanagrams leetcode/find_all_anagram_strings.cpp)
#add_executable(contiguessubarray leetcode/contigues_array.cpp)
#add_executable(mergesortedlist leetcode/merge_k_sortedList.cpp)
#add_executable(removedupplicates leetcode/remove_duplicates_from_sorted_ii.cpp)
#add_executable(kdiffpairs leetcode/k_diff_pair_in_arrays.cpp)
#add_executable(subarraysumequalk leetcode/sub_arra_sum_equal_k.cpp)
#add_executable(wordladder leetcode/word_ladder.cpp)
#add_executable(subsets leetcode/subsets.cpp)
#add_executable(swapnodes leetcode/swap_nodes_in_pairs.cpp)
#add_executable(swappingnodes leetcode/swapping_nodes_in_linkedlist.cpp)
add_executable(minimizedeviationofarr src/minimize_deviation_of_arry.cpp)