project(arrays)

#add_executable(textjust leetcode/text_justifications.cpp)
#add_executable(removeintervals leetcode/remove_intervals.cpp)
#add_executable(search2dmatrix leetcode/search_2d_matrix.cpp)
#add_executable(searchrotatedarray leetcode/search_in_rotated_array.cpp)
#add_executable(searchrotatedarrayii leetcode/search_in_rotated_sorted_array_ii.cpp)
#add_executable(summaryranges leetcode/summary_ranges.cpp)
#add_executable(deletenearn leetcode/delete_and_earn.cpp)
#add_executable(validate_stack_seq leetcode/validate_stack_sequence.cpp)
#add_executable(minimum_domino_rotates leetcode/minimum_domino_rotations_for_equal_row.cpp)
#add_executable(thekweakestrows leetcode/the_k_weakest_rows_in_a_matrix.cpp)
#add_executable(findtheduplicate leetcode/find_the_duplicate.cpp)
#add_executable(next_permutation leetcode/next_permutation.cpp)
#add_executable(thresumm leetcode/three_sum_with_multiplicity.cpp)
#add_executable(topkfrequent_elements leetcode/top_k_frequent_elements.cpp)
#add_executable(design_hasset leetcode/design_hasset.cpp)
#add_executable(peekingiterator leetcode/peeking_iterator.cpp)
#add_executable(sortbyparity leetcode/sort_arry_by_parity.cpp)
#add_executable(shorted_unsorted_continues_subarr leetcode/shorted_unsorted_continues_subarr.cpp)
#add_executable(max_numofpairs leetcode/max_number_of_k_sum_pairs.cpp)
#add_executable(flatten_neseted_iterator leetcode/flatten_nested_list_iterator.cpp)
#add_executable(merge_two_sorted_arrays leetcode/merge_two_sorted_arrays.cpp)
#add_executable(two_sum_ii_array_is_sorted leetcode/two_sum_ii_array_is_sorted.cpp)
#add_executable(maximum_erasure_value leetcode/maximum_erasure_value.cpp)
#add_executable(triangle leetcode/triangle.cpp)
#add_executable(solution leetcode/matchsticks_to_square.cpp)
#add_executable(solution leetcode/max_area_of_island_.cpp)
#add_executable(solution src/number_of_submatrices_that_sum_to_target.cpp)
#add_executable(count_of_smaller_number_after_self src/count_of_smaller_number_after_self.cpp)
#add_executable(search_matrix_ii src/search_matrix_ii.cpp)
#add_executable(find_first_and_last_positions src/find_first_and_last_positions.cpp)
#add_executable(find_and_replace_pattern src/find_and_replace_pattern.cpp)
#add_executable(word_subsets src/word_subsets.cpp)
#add_executable(range_sum_query src/range_sum_query-mutable.cpp)
#add_executable(range_sum_query_immutable src/range_sum_query_imutable.cpp)
#add_executable(kth_smallest_element_in_a_sorted_matrix src/kth_smallest_element_in_a_sorted_matrix.cpp)
#add_executable(combination_sum_iv src/combination_sum_iv.cpp)
#add_executable(max_sum_of_rectangle_no_larger_than_k src/max_sum_of_reactangle_no_large_than_k.cpp)
add_executable(sort_the_matrix_diagonally src/sort_the_matrix_diagonally.cpp)