project(arrays)

set(CMAKE_CXX_FLAGS " -std=c++20 -fsanitize=address -ggdb3 -Wall -Wextra")

#add_executable(textjust leetcode/text_justifications.cpp)
#add_executable(removeintervals leetcode/remove_intervals.cpp)
#add_executable(search2dmatrix leetcode/search_2d_matrix.cpp)
#add_executable(searchrotatedarray leetcode/search_in_rotated_array.cpp)
#add_executable(searchrotatedarrayii leetcode/search_in_rotated_sorted_array_ii.cpp)
#add_executable(summaryranges leetcode/summary_ranges.cpp)
#add_executable(deletenearn leetcode/delete_and_earn.cpp)
#add_executable(validate_stack_seq leetcode/validate_stack_sequence.cpp)
#add_executable(minimum_domino_rotates leetcode/minimum_domino_rotations_for_equal_row.cpp)
#add_executable(thekweakestrows leetcode/the_k_weakest_rows_in_a_matrix.cpp)
#add_executable(findtheduplicate leetcode/find_the_duplicate.cpp)
#add_executable(next_permutation leetcode/next_permutation.cpp)
#add_executable(thresumm leetcode/three_sum_with_multiplicity.cpp)
#add_executable(topkfrequent_elements leetcode/top_k_frequent_elements.cpp)
#add_executable(design_hasset leetcode/design_hasset.cpp)
#add_executable(peekingiterator leetcode/peeking_iterator.cpp)
#add_executable(sortbyparity leetcode/sort_arry_by_parity.cpp)
#add_executable(shorted_unsorted_continues_subarr leetcode/shorted_unsorted_continues_subarr.cpp)
#add_executable(max_numofpairs leetcode/max_number_of_k_sum_pairs.cpp)
#add_executable(flatten_neseted_iterator leetcode/flatten_nested_list_iterator.cpp)
#add_executable(merge_two_sorted_arrays leetcode/merge_two_sorted_arrays.cpp)
#add_executable(two_sum_ii_array_is_sorted leetcode/two_sum_ii_array_is_sorted.cpp)
#add_executable(maximum_erasure_value leetcode/maximum_erasure_value.cpp)
#add_executable(triangle leetcode/triangle.cpp)
#add_executable(solution leetcode/matchsticks_to_square.cpp)
#add_executable(solution leetcode/max_area_of_island_.cpp)
#add_executable(solution src/number_of_submatrices_that_sum_to_target.cpp)
#add_executable(count_of_smaller_number_after_self src/count_of_smaller_number_after_self.cpp)
#add_executable(search_matrix_ii src/search_matrix_ii.cpp)
#add_executable(find_first_and_last_positions src/find_first_and_last_positions.cpp)
#add_executable(find_and_replace_pattern src/find_and_replace_pattern.cpp)
#add_executable(word_subsets src/word_subsets.cpp)
#add_executable(range_sum_query src/range_sum_query-mutable.cpp)
#add_executable(range_sum_query_immutable src/range_sum_query_imutable.cpp)
#add_executable(kth_smallest_element_in_a_sorted_matrix src/kth_smallest_element_in_a_sorted_matrix.cpp)
#add_executable(combination_sum_iv src/combination_sum_iv.cpp)
#add_executable(max_sum_of_rectangle_no_larger_than_k src/max_sum_of_reactangle_no_large_than_k.cpp)
#add_executable(sort_the_matrix_diagonally src/sort_the_matrix_diagonally.cpp)
#add_executable(rotate_matrix src/rotate_matrix.cpp)
#add_executable(maximum_score_from_perfoming_multication_operations src/maximum_score_from_perfoming_multication_operations.cpp)
#add_executable(sum_of_even_numbers_after_queries src/sum_of_even_numbers_after_queries.cpp)
#add_executable(find_k_closest_elements src/find_k_closest_elements.cpp)
#add_executable(the_skyline_problem src/the_skyline_problem.cpp)
#add_executable(increasing_triplet_subsequence src/increasing_triplet_subsequence.cpp)
#add_executable(set_mismatch src/set_mismatch.cpp)
#add_executable(continues_subarray_sum src/continues_subarray_sum.cpp)
#add_executable(toeplitz_matrix src/toeplitz_matrix.cpp)
#add_executable(find_duplicates_from_sorted_array_in_place src/find_duplicates_from_sorted_array_in_place.cpp)
#add_executable(minim_average_difference src/minim_average_difference.cpp)
#add_executable(maximu_numeber_of_coins_you_get src/maximum_number_of_you_get.cpp)
#add_executable(sum_of_all_absulute_difference_in_sorted_arr src/sum_of_all_absulute_difference_in_sorted_arr.cpp)
#add_executable(find_words_that_can_be_formed_characters src/find_words_that_can_be_formed_charactors.cpp)
#add_executable(minimum_time_visiting_all_points src/minimum_time_visiting_all_points.cpp)
#add_executable(transpose_matrix src/tanspose_matrix.cpp)
#add_executable(find_polygon_with_the_largest_perimeter src/find_polygon_with_the_largest_perimeter.cpp)
#add_executable(greatest_common_divisor_traversal src/greatest_common_divisor_traversal.cpp)
#add_executable(squares_of_a_sorted_array src/squares_of_a_sorted_array.cpp)
#add_executable(bag_of_tokens src/bag_of_tokens.cpp)
#add_executable(product_of_array_except_self src/product_of_array_except_self.cpp)
#add_executable(subarrays_with_k_different_integers src/subarrays_with_k_different_integers.cpp)
#add_executable(maximize_happiness_of_selected_children src/maximize_happinies_of_selected_children.cpp)
#add_executable(largest_local_value_in_a_matrix src/largest_local_value_in_a_matrix.cpp)
#add_executable(find_common_chars src/find_common_charactors.cpp)
#add_executable(continues_subarray_sum src/continues_subarray_sum_.cpp)
#add_executable(lucky_numbers_in_a_matrix src/luck_numbers_in_a_matrix.cpp)
#add_executable(count_number_of_teams src/count_number_of_teams.cpp)
add_executable(convert_1d_array_to_2d src/convert_1d_array_to_2d.cpp)