project(backtracking)


#add_executable(combinationsum leetcode/combination_sum.cpp)
#add_executable(combinations leetcode/combinations.cpp)
#add_executable(graycode leetcode/gray_code.cpp)
#add_executable(subsetii leetcode/subset_ii.cpp)
#add_executable(conbination_sum_iii leetcode/conbination_sum_iii.cpp)
#add_executable(permutation_ii src/permutations_ii.cpp)
#add_executable(numbers_with_same_consecutive_differences src/numbers_with_same_consecutive_differences.cpp)
add_executable(word_search src/word_search.cpp)