project(bitmanupulation)

#add_executable(maxproduct src/max_product_of_word_len.cpp)
#add_executable(checkallbinnumbers src/check_if_a_string_cotains_all_binary_codes_of_sizes_k.cpp)
#add_executable(utf_8_validation src/utf_8_validation.cpp)
add_executable(concatenation_of_consecutive_binary_numbers src/concatenation_of_consecutive_binary_numbers.cpp)