project(Contests)


#add_executable(solution leetcode/min_amount_of.cpp)
#add_executable(solution leetcode/smallest_number_in_set.cpp)
#add_executable(solution leetcode/move_pieces_to_obtain_a_string.cpp)
#add_executable(solution1 leetcode/maximum_number_of_pairs_in_array.cpp)
#add_executable(solution2 leetcode/maximum_sum_of_.cpp)
#add_executable(solution3 src/query_kth_smallest_trimed_number.cpp)
#add_executable(solution4 src/best_poker_hans.cpp)
#add_executable(solution5 src/number_of_zeros_.cpp)
#add_executable(solution6 src/number_container_system.cpp)
#add_executable(solution7 src/triplet.cpp)
#add_executable(solution8 src/good_sub_arr.cpp)
#add_executable(solution9 src/reachable_nodes.cpp)
#add_executable(solution1 src/merge_similar_items.cpp)
#add_executable(solution11 src/count_number_of_bad_pairs.cpp)
#add_executable(solution12 src/largest_local_values.cpp)
#add_executable(solution13 src/node_with_highst_edge.cpp)
#add_executable(solution14 src/cosntruct_di_string.cpp)
#add_executable(solution15 src/min_recolor_to_getk.cpp)
#add_executable(solution16 src/time_need_to_arrange.cpp)
#add_executable(solution17 src/shift_letters_2.cpp)
#add_executable(solution18 src/larget_palindrome.cpp)
#add_executable(solution19 src/min_hours_of_training.cpp)
#add_executable(solution20 src/infections.cpp)
#add_executable(solution21 src/longest_sub_Arr.cpp)
#add_executable(solution22 src/username_chantes.cpp)

#set(SRC src/task_of_pairing.cpp)
#set(SRC src/remove_star.cpp)
#set(SRC src/longest_subseq_sum.cpp)
#set(SRC src/min_amount_of_time.cpp)
#
#
#add_executable(sol2 ${SRC})
#
#add_executable(sol12 src/weekly308/1.cpp)
#add_executable(sol22 src/weekly308/2.cpp)
#add_executable(sol32 src/weekly308/3.cpp)
#add_executable(sort_the_people src/sort_the_people.cpp)
#add_executable(longest_subarr src/past/longest_subarr.cpp)
#add_executable(findall src/past/find_all_good_indeces.cpp)
#
#add_executable(1 src/biweekly88/1.cpp)
#add_executable(2 src/biweekly88/2.cpp)
#add_executable(3 src/biweekly88/3.cpp)
#add_executable(1 src/1.cpp)
#add_executable(2 src/2.cpp)
#add_executable(3 src/weekly313/3.cpp)
add_executable(1 src/1.cpp)
add_executable(2 src/2.cpp)