project(dp)

#add_executable(champagnetower leetcode/champagne_tower.cpp)
#add_executable(countsorted_vowel leetcode/count_sorted_vowel_strings.cpp)
#add_executable(network_delay_time leetcode/network_delay_time.cpp)
#add_executable(palindromic_substring leetcode/palindromic_substring.cpp)
#add_executable(get_maximum_in_generated_array leetcode/get_maximun_in_generated_array.cpp)
#add_executable(jump_game_vi leetcode/jump_game_vi.cpp)
#add_executable(min_cost_climbing_stairs leetcode/min_cost_climbing_stairs.cpp)
#add_executable(house_robber leetcode/house_robber.cpp)
#add_executable(house_robber_ii leetcode/house_robber_ii.cpp)
#add_executable(best_sightseeing_pair leetcode/best_sightseeing_pair.cpp)
#add_executable(delete_and_earn leetcode/delete_and_earn.cpp)
#add_executable(jump_game leetcode/jump_game.cpp)
#add_executable(jumpgameii leetcode/jump_game_ii.cpp)
#add_executable(maximum_sub_array leetcode/maximum_sub_array.cpp)
#add_executable(out_of_bound_paths leetcode/out_of_bound_paths.cpp)
#add_executable(maximum_sum_circular_sub_array leetcode/maximum_sum_circular_sub_array.cpp)
#add_executable(k_inverse_pair_array leetcode/k_inverse_pair_array.cpp)
#add_executable(best_time_to_buy_i src/best_time_to_buy_i.cpp)
add_executable(maximum_sum_circular_sub_array src/maximum_sum_circular_sub_array.cpp)
add_executable(pascal_triangle src/pascal_triangle.cpp)
add_executable(decodeways src/decode_ways.cpp)