project(dp)

#add_executable(champagnetower leetcode/champagne_tower.cpp)
#add_executable(countsorted_vowel leetcode/count_sorted_vowel_strings.cpp)
#add_executable(network_delay_time leetcode/network_delay_time.cpp)
#add_executable(palindromic_substring leetcode/palindromic_substring.cpp)
#add_executable(get_maximum_in_generated_array leetcode/get_maximun_in_generated_array.cpp)
#add_executable(jump_game_vi leetcode/jump_game_vi.cpp)
#add_executable(min_cost_climbing_stairs leetcode/min_cost_climbing_stairs.cpp)
#add_executable(house_robber leetcode/house_robber.cpp)
#add_executable(house_robber_ii leetcode/house_robber_ii.cpp)
#add_executable(best_sightseeing_pair leetcode/best_sightseeing_pair.cpp)
#add_executable(delete_and_earn leetcode/delete_and_earn.cpp)
#add_executable(jump_game leetcode/jump_game.cpp)
#add_executable(jumpgameii leetcode/jump_game_ii.cpp)
#add_executable(maximum_sub_array leetcode/maximum_sub_array.cpp)
#add_executable(out_of_bound_paths leetcode/out_of_bound_paths.cpp)
#add_executable(maximum_sum_circular_sub_array leetcode/maximum_sum_circular_sub_array.cpp)
#add_executable(k_inverse_pair_array leetcode/k_inverse_pair_array.cpp)
#add_executable(best_time_to_buy_i src/best_time_to_buy_i.cpp)
#add_executable(maximum_sum_circular_sub_array src/maximum_sum_circular_sub_array.cpp)
#add_executable(pascal_triangle src/pascal_triangle.cpp)
#add_executable(decodeways src/decode_ways.cpp)
#add_executable(arithmetic_slices src/arithmetic_slices.cpp)
#add_executable(maximum_product_subarray src/maximum_product_subarray.cpp)
#add_executable(count_vowels_permutations src/count_vowels_permutations.cpp)
#add_executable(longest_increasing_subseq src/longest_increasing_subsequence.cpp)
#add_executable(binray_trees_with_factors src/binray_trees_with_factors.cpp)
#add_executable(minimum_number_refueling_stops src/minimum_number_refueling_stops.cpp)
#add_executable(trapping_water src/trapping_water.cpp)
#add_executable(decode_ways_i src/decode_ways_i.cpp)
#add_executable(all_sub_sets udemy/all_sub_sets.cpp)
add_executable(string_compression_ii src/string_compression_ii.cpp)