project(graphs)

#add_executable(clonegraph leetcode/clone_graph.cpp)
#add_executable(shortedpath_visiting_allnodes leetcode/shortest_path_visiting_all_nodes.cpp)
#add_executable(critical_connections_in_a_network src/critical_connections_in_a_network.cpp)
#add_executable(numberof_islands src/number_of_islands.cpp)
#add_executable(flood_fill1 src/flood_fill.cpp)
#add_executable(pacific_atlantic_atlantic_water_flow src/pacific_atlantic_atlantic_water_flow.cpp)
add_executable(max_area_of_island src/max_area_of_island.cpp)