project(days75)

#add_executable(isomorphic_strings src/isomorphic_strings.cpp)
#add_executable(is_subsqq src/is_subsequence.cpp)
#add_executable(merge_two_sorted_list src/merge_two_sorted_list.cpp)
#add_executable(merge_two_sorted_list src/middle_of_the_linkedlist.cpp)
add_executable(linkedlist_cycle_ii src/linkedlist_cycle_ii.cpp)