project(days75)

#add_executable(isomorphic_strings src/isomorphic_strings.cpp)
#add_executable(is_subsqq src/is_subsequence.cpp)
#add_executable(merge_two_sorted_list src/merge_two_sorted_list.cpp)
#add_executable(merge_two_sorted_list src/middle_of_the_linkedlist.cpp)
#add_executable(linkedlist_cycle_ii src/linkedlist_cycle_ii.cpp)
#add_executable(best_time_to_buy_and_sell src/best_time_to_buy_and_sell.cpp)
#add_executable(longest_palindrome src/longest_palindrome.cpp)
#add_executable(n-aray-tree-preorder-traversal src/n-aray-tree-preoder-traversal.cpp)
#add_executable(binary_tree_level_order_traversal src/binary_tree_level_order_travesal.cpp)
add_executable(valid_btree src/valid_btree.cpp)