project(days75)

#add_executable(isomorphic_strings src/isomorphic_strings.cpp)
#add_executable(is_subsqq src/is_subsequence.cpp)
#add_executable(merge_two_sorted_list src/merge_two_sorted_list.cpp)
#add_executable(merge_two_sorted_list src/middle_of_the_linkedlist.cpp)
#add_executable(linkedlist_cycle_ii src/linkedlist_cycle_ii.cpp)
#add_executable(best_time_to_buy_and_sell src/best_time_to_buy_and_sell.cpp)
#add_executable(longest_palindrome src/longest_palindrome.cpp)
#add_executable(n-aray-tree-preorder-traversal src/n-aray-tree-preoder-traversal.cpp)
#add_executable(binary_tree_level_order_traversal src/binary_tree_level_order_travesal.cpp)
#add_executable(valid_btree src/valid_btree.cpp)
#add_executable(flood_fill src/flood_fill.cpp)
#add_executable(number_of_islands src/number_of_islands.cpp)
#add_executable(unique_paths src/unique_paths.cpp)
#add_executable(twosum src/two_sum.cpp)
#add_executable(find_all_anagrams_in_a_string src/find_all_anagrams_in_a_string.cpp)
#add_executable(decode_string src/decode_string.cpp)
#add_executable(last_stone_weight src/last_stone_weight.cpp)
#add_executable(top_k_frequent_words src/top_k_frequent_words.cpp)
#add_executable(bulls src/bulls_and_cows.cpp)
#add_executable(longest_repeating_chars src/longest_repeating_character_replacement.cpp)
#add_executable(happy_number src/happy_number.cpp)
#add_executable(spiral_matrix src/spiral_matrix.cpp)
#add_executable(where_will_the_ball_fall src/where_will_the_ball_fall.cpp)
#add_executable(substring_with_concat_of_all_words src/substring_with_concat_of_all_words.cpp)
#add_executable(longest_common_prefix src/longest_common_prefix.cpp)
add_executable(multiply_strings src/multiply_strings.cpp)