project(linkedlist)

#add_executable(partitionlist leetcode/partition_list.cpp)
#add_executable(removeduplicate leetcode/remove_duplicates.cpp)
#add_executable(sortlist leetcode/sort_list.cpp)
#add_executable(addnumbers leetcode/add_numbers.cpp)
#add_executable(rotatelist leetcode/rotate_list.cpp)
#add_executable(copy_list_with_random_pointer leetcode/copy_list_with_random_pointer.cpp)
#add_executable(reversell leetcode/reverse_linked_list.cpp leetcode/swapping_nodes_in_a_linkedlist.cpp)
#add_executable(swappingnodes leetcode/swapping_nodes_in_a_linkedlist.cpp)
#add_executable(intersection_of_two_linkedlist src/intersection_of_two_linkedlist.cpp)
#add_executable(reverse_linkedlist_ii src/reverse_linkedlist_ii.cpp)
#add_executable(reverse_linkedlist src/reverse_linked_list.cpp)
#add_executable(partition_list src/partition_list_.cpp)
#add_executable(palindrome_list src/palindrom_list.cpp)
#add_executable(remove_nth_node_from_a_list src/remove_nth_node_from_a_list.cpp)
add_executable(delete_node_in_a_linklist src/delete_node_in_a_linkedlist.cpp)