project(mapnset)


#add_executable(designhasmap leetcode/design_hasmap.cpp)
#add_executable(designunderground leetcode/design_underground_system.cpp)
#add_executable(letter_combinations_of_a_phone_number leetcode/letter_combinations_of_a_phone_number.cpp)
#add_executable(longest_substring_without_repeating_chars src/longest_substring_without_repeating_chars.cpp)
add_executable(mycalendar_i src/my_calendar_i.cpp)