project(mapnset)


#add_executable(designhasmap leetcode/design_hasmap.cpp)
#add_executable(designunderground leetcode/design_underground_system.cpp)
#add_executable(letter_combinations_of_a_phone_number leetcode/letter_combinations_of_a_phone_number.cpp)
#add_executable(longest_substring_without_repeating_chars src/longest_substring_without_repeating_chars.cpp)
#add_executable(mycalendar_i src/my_calendar_i.cpp)
#add_executable(split_array_into_consecutive_subsequences src/split_array_into_consecutive_subsequences.cpp)
#add_executable(find_original_array_from_doubled_array src/find_original_array_from_doubled_array.cpp)
#add_executable(palindrome_pairs src/palindrome_pairs.cpp)
#add_executable(time_based_key_value_store src/time_based_key_value_store.cpp)
#add_executable(mycalendar_iii src/mycalendar_iii.cpp)
#add_executable(containes_duplicate_ii src/containes_duplicate_ii.cpp)
#add_executable(find_players_with_zero_or_one_losses src/find_players_with_zero_or_one_loss.cpp)
add_executable(insert_delete_getrandom src/insert_delete_getrandom.cpp)