project(math)

#add_executable(devidetwoints src/devide_two_ints.cpp)
#add_executable(power_of_four src/power_of_four.cpp)
#add_executable(power_of_three src/power_of_three.cpp)
#add_executable(reorder_power_of_two src/reorder_power_of_two.cpp)
#add_executable(count_days_spend_together src/count_days_spend_together.cpp)
add_executable(maximum_69_number src/maximum_69_number.cpp)