project(Practice)


#add_executable(mini_moves leetcode/minimun_moves_to_equal_array.cpp)
#add_executable(longest_consecutive_sequene leetcode/longest_consecutive_sequene.cpp)
#add_executable(find_peak_element leetcode/find_peak_element.cpp)
#add_executable(count_primes leetcode/count_primes.cpp)
#add_executable(minimum_sub_array_sum leetcode/minimum_sub_array_sum.cpp)
#add_executable(contains_duplicate_iii leetcode/contains_duplicate_iii.cpp)
#add_executable(majority_element_ii leetcode/majority_element_ii.cpp)
#add_executable(evaluate_reverse_polish_notation leetcode/evaluate_reverse_polish_notation.cpp)
#add_executable(maximun_units_on_a_truck leetcode/maximun_units_on_a_truck.cpp)
#add_executable(largest_number leetcode/largest_number.cpp)
#add_executable(max_area_of_a_piece_of_cake leetcode/max_area_of_a_piece_of_cacke.cpp)
#add_executable(find_missing_observations leetcode/find_missing_observations.cpp)
#add_executable(remove_one_five leetcode/remove_one_five.cpp)
#add_executable(count_good_nodes_in_a_btree leetcode/count_good_nodes_in_a_btree.cpp)
#add_executable(reverse_linkedlist_ii leetcode/reverse_linkedlist_ii.cpp)
#add_executable(remove_digit_from_number_to_maximize_result leetcode/remove_digit_from_number_to_maximize_result.cpp)
#add_executable(balance_paranthesis leetcode/balance_paranthesis.cpp)
#add_executable(decode_message leetcode/decode_message.cpp)
#add_executable(spiral_matrix_ leetcode/spiral_matrix_.cpp)
#add_executable(winggle_sequence leetcode/winggle_sequence.cpp)
#add_executable(rearrange_array_elements_by_sign leetcode/rearrange_array_elements_by_sign.cpp)
#add_executable(reverse_vowels_of_a_string leetcode/reverse_vowels_of_a_string.cpp)
#add_executable(max_length_of_concatenated_string_with_unique_chars leetcode/max_lenght_of_concatanated_string_with_unique_chars.cpp)
#add_executable(candy leetcode/candy.cpp)
#add_executable(maximum_consecutive_floors_without_special_floors leetcode/maximum_consecutive_floors_without_special_floors.cpp)
#add_executable(fibonacci_numbers leetcode/fibonacci_numbers.cpp)
#add_executable(split_array_into_fibonacci_sequence leetcode/split_array_into_fibonacci_sequence.cpp)
#add_executable(interleaving_strings leetcode/interleaving_strings.cpp)
add_executable(house_paint_iii src/house_paint_iii.cpp)